.antlr/gramParser.java
// Generated from c:\Users\draems\Desktop\pyweb\app\juandb\gram.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, ID=97, INT=98, WS=99;
	public static final int
		RULE_r = 0, RULE_select_statement = 1, RULE_delete_statement = 2, RULE_insert_statement = 3, 
		RULE_column = 4, RULE_columnlist = 5, RULE_table = 6, RULE_allChar = 7, 
		RULE_birthday = 8, RULE_time = 9, RULE_studentNo = 10, RULE_sem = 11, 
		RULE_inputValue = 12, RULE_operators = 13, RULE_operands = 14, RULE_condition = 15;
	public static final String[] ruleNames = {
		"r", "select_statement", "delete_statement", "insert_statement", "column", 
		"columnlist", "table", "allChar", "birthday", "time", "studentNo", "sem", 
		"inputValue", "operators", "operands", "condition"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'select'", "'from'", "'where'", "';'", "'delete from'", "'insert into'", 
		"'('", "'values ('", "', '", "');'", "'*'", "'studno'", "'studentname'", 
		"'birthday'", "'degree'", "'major'", "'unitsearned'", "'studno,'", "'studentname,'", 
		"'birthday,'", "'degree,'", "'major,'", "'unitsearned,'", "'description'", 
		"'action'", "'datefiled'", "'dateresolved'", "'description,'", "'action,'", 
		"'datefiled,'", "'dateresolved,'", "'cno'", "'ctitle'", "'cdesc'", "'noofunits'", 
		"'haslab'", "'semoffered'", "'cno,'", "'ctitle,'", "'cdesc,'", "'noofunits,'", 
		"'haslab,'", "'semoffered,'", "'semester'", "'acadyear'", "'section'", 
		"'time'", "'maxstud'", "'semester,'", "'acadyear,'", "'section,'", "'time,'", 
		"'maxstud,'", "'studno)'", "'studentname)'", "'birthday)'", "'degree)'", 
		"'major)'", "'unitsearned)'", "'action)'", "'datefile)'", "'dateresolved)'", 
		"'datefile,'", "'cno)'", "'ctitle)'", "'cdesc)'", "'noofunits)'", "'haslab)'", 
		"'semoffered)'", "'semester)'", "'acadyear)'", "'section)'", "'time)'", 
		"'maxstud)'", "'student'", "'studenthistory'", "'course'", "'courseoffering'", 
		"'studcourse'", "'1'", "'2'", "'-'", "'0'", "'3'", "':'", "'4'", "'5'", 
		"'1st'", "'2nd'", "'Sum'", "'<'", "'>'", "'='", "'!='", "'AND'", "'OR'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "ID", "INT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public Delete_statementContext delete_statement() {
			return getRuleContext(Delete_statementContext.class,0);
		}
		public Insert_statementContext insert_statement() {
			return getRuleContext(Insert_statementContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(32);
				select_statement();
				}
				break;
			case T__4:
				{
				setState(33);
				delete_statement();
				}
				break;
			case T__5:
				{
				setState(34);
				insert_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_statementContext extends ParserRuleContext {
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public Select_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_statement; }
	}

	public final Select_statementContext select_statement() throws RecognitionException {
		Select_statementContext _localctx = new Select_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(T__0);
			setState(38);
			column();
			setState(39);
			match(T__1);
			setState(40);
			table();
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(41);
				match(T__2);
				setState(42);
				condition();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Delete_statementContext extends ParserRuleContext {
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public Delete_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete_statement; }
	}

	public final Delete_statementContext delete_statement() throws RecognitionException {
		Delete_statementContext _localctx = new Delete_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_delete_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__4);
			setState(51);
			table();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(52);
				match(T__2);
				setState(53);
				condition();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Insert_statementContext extends ParserRuleContext {
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public List<InputValueContext> inputValue() {
			return getRuleContexts(InputValueContext.class);
		}
		public InputValueContext inputValue(int i) {
			return getRuleContext(InputValueContext.class,i);
		}
		public List<ColumnlistContext> columnlist() {
			return getRuleContexts(ColumnlistContext.class);
		}
		public ColumnlistContext columnlist(int i) {
			return getRuleContext(ColumnlistContext.class,i);
		}
		public Insert_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert_statement; }
	}

	public final Insert_statementContext insert_statement() throws RecognitionException {
		Insert_statementContext _localctx = new Insert_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_insert_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(T__5);
			setState(62);
			table();
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(63);
				match(T__6);
				setState(64);
				columnlist();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(T__7);
			{
			setState(71);
			inputValue();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(72);
				match(T__8);
				setState(73);
				inputValue();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(79);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContext extends ParserRuleContext {
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column; }
	}

	public final ColumnContext column() throws RecognitionException {
		ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_column);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				{
				setState(81);
				match(T__10);
				}
				break;
			case T__11:
				{
				setState(82);
				match(T__11);
				}
				break;
			case T__12:
				{
				setState(83);
				match(T__12);
				}
				break;
			case T__13:
				{
				setState(84);
				match(T__13);
				}
				break;
			case T__14:
				{
				setState(85);
				match(T__14);
				}
				break;
			case T__15:
				{
				setState(86);
				match(T__15);
				}
				break;
			case T__16:
				{
				setState(87);
				match(T__16);
				}
				break;
			case T__17:
				{
				setState(88);
				match(T__17);
				setState(89);
				column();
				}
				break;
			case T__18:
				{
				setState(90);
				match(T__18);
				setState(91);
				column();
				}
				break;
			case T__19:
				{
				setState(92);
				match(T__19);
				setState(93);
				column();
				}
				break;
			case T__20:
				{
				setState(94);
				match(T__20);
				setState(95);
				column();
				}
				break;
			case T__21:
				{
				setState(96);
				match(T__21);
				setState(97);
				column();
				}
				break;
			case T__22:
				{
				setState(98);
				match(T__22);
				setState(99);
				column();
				}
				break;
			case T__23:
				{
				setState(100);
				match(T__23);
				}
				break;
			case T__24:
				{
				setState(101);
				match(T__24);
				}
				break;
			case T__25:
				{
				setState(102);
				match(T__25);
				}
				break;
			case T__26:
				{
				setState(103);
				match(T__26);
				}
				break;
			case T__27:
				{
				setState(104);
				match(T__27);
				setState(105);
				column();
				}
				break;
			case T__28:
				{
				setState(106);
				match(T__28);
				setState(107);
				column();
				}
				break;
			case T__29:
				{
				setState(108);
				match(T__29);
				setState(109);
				column();
				}
				break;
			case T__30:
				{
				setState(110);
				match(T__30);
				setState(111);
				column();
				}
				break;
			case T__31:
				{
				setState(112);
				match(T__31);
				}
				break;
			case T__32:
				{
				setState(113);
				match(T__32);
				}
				break;
			case T__33:
				{
				setState(114);
				match(T__33);
				}
				break;
			case T__34:
				{
				setState(115);
				match(T__34);
				}
				break;
			case T__35:
				{
				setState(116);
				match(T__35);
				}
				break;
			case T__36:
				{
				setState(117);
				match(T__36);
				}
				break;
			case T__37:
				{
				setState(118);
				match(T__37);
				setState(119);
				column();
				}
				break;
			case T__38:
				{
				setState(120);
				match(T__38);
				setState(121);
				column();
				}
				break;
			case T__39:
				{
				setState(122);
				match(T__39);
				setState(123);
				column();
				}
				break;
			case T__40:
				{
				setState(124);
				match(T__40);
				setState(125);
				column();
				}
				break;
			case T__41:
				{
				setState(126);
				match(T__41);
				setState(127);
				column();
				}
				break;
			case T__42:
				{
				setState(128);
				match(T__42);
				setState(129);
				column();
				}
				break;
			case T__43:
				{
				setState(130);
				match(T__43);
				}
				break;
			case T__44:
				{
				setState(131);
				match(T__44);
				}
				break;
			case T__45:
				{
				setState(132);
				match(T__45);
				}
				break;
			case T__46:
				{
				setState(133);
				match(T__46);
				}
				break;
			case T__47:
				{
				setState(134);
				match(T__47);
				}
				break;
			case T__48:
				{
				setState(135);
				match(T__48);
				setState(136);
				column();
				}
				break;
			case T__49:
				{
				setState(137);
				match(T__49);
				setState(138);
				column();
				}
				break;
			case T__50:
				{
				setState(139);
				match(T__50);
				setState(140);
				column();
				}
				break;
			case T__51:
				{
				setState(141);
				match(T__51);
				setState(142);
				column();
				}
				break;
			case T__52:
				{
				setState(143);
				match(T__52);
				setState(144);
				column();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnlistContext extends ParserRuleContext {
		public ColumnlistContext columnlist() {
			return getRuleContext(ColumnlistContext.class,0);
		}
		public ColumnlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnlist; }
	}

	public final ColumnlistContext columnlist() throws RecognitionException {
		ColumnlistContext _localctx = new ColumnlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_columnlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__53:
				{
				setState(147);
				match(T__53);
				}
				break;
			case T__54:
				{
				setState(148);
				match(T__54);
				}
				break;
			case T__55:
				{
				setState(149);
				match(T__55);
				}
				break;
			case T__56:
				{
				setState(150);
				match(T__56);
				}
				break;
			case T__57:
				{
				setState(151);
				match(T__57);
				}
				break;
			case T__58:
				{
				setState(152);
				match(T__58);
				}
				break;
			case T__17:
				{
				setState(153);
				match(T__17);
				setState(154);
				columnlist();
				}
				break;
			case T__18:
				{
				setState(155);
				match(T__18);
				setState(156);
				columnlist();
				}
				break;
			case T__19:
				{
				setState(157);
				match(T__19);
				setState(158);
				columnlist();
				}
				break;
			case T__20:
				{
				setState(159);
				match(T__20);
				setState(160);
				columnlist();
				}
				break;
			case T__21:
				{
				setState(161);
				match(T__21);
				setState(162);
				columnlist();
				}
				break;
			case T__22:
				{
				setState(163);
				match(T__22);
				setState(164);
				columnlist();
				}
				break;
			case T__23:
				{
				setState(165);
				match(T__23);
				}
				break;
			case T__59:
				{
				setState(166);
				match(T__59);
				}
				break;
			case T__60:
				{
				setState(167);
				match(T__60);
				}
				break;
			case T__61:
				{
				setState(168);
				match(T__61);
				}
				break;
			case T__27:
				{
				setState(169);
				match(T__27);
				setState(170);
				columnlist();
				}
				break;
			case T__28:
				{
				setState(171);
				match(T__28);
				setState(172);
				columnlist();
				}
				break;
			case T__62:
				{
				setState(173);
				match(T__62);
				setState(174);
				columnlist();
				}
				break;
			case T__30:
				{
				setState(175);
				match(T__30);
				setState(176);
				columnlist();
				}
				break;
			case T__63:
				{
				setState(177);
				match(T__63);
				}
				break;
			case T__64:
				{
				setState(178);
				match(T__64);
				}
				break;
			case T__65:
				{
				setState(179);
				match(T__65);
				}
				break;
			case T__66:
				{
				setState(180);
				match(T__66);
				}
				break;
			case T__67:
				{
				setState(181);
				match(T__67);
				}
				break;
			case T__68:
				{
				setState(182);
				match(T__68);
				}
				break;
			case T__37:
				{
				setState(183);
				match(T__37);
				setState(184);
				columnlist();
				}
				break;
			case T__38:
				{
				setState(185);
				match(T__38);
				setState(186);
				columnlist();
				}
				break;
			case T__39:
				{
				setState(187);
				match(T__39);
				setState(188);
				columnlist();
				}
				break;
			case T__40:
				{
				setState(189);
				match(T__40);
				setState(190);
				columnlist();
				}
				break;
			case T__41:
				{
				setState(191);
				match(T__41);
				setState(192);
				columnlist();
				}
				break;
			case T__42:
				{
				setState(193);
				match(T__42);
				setState(194);
				columnlist();
				}
				break;
			case T__69:
				{
				setState(195);
				match(T__69);
				}
				break;
			case T__70:
				{
				setState(196);
				match(T__70);
				}
				break;
			case T__71:
				{
				setState(197);
				match(T__71);
				}
				break;
			case T__72:
				{
				setState(198);
				match(T__72);
				}
				break;
			case T__73:
				{
				setState(199);
				match(T__73);
				}
				break;
			case T__48:
				{
				setState(200);
				match(T__48);
				setState(201);
				columnlist();
				}
				break;
			case T__49:
				{
				setState(202);
				match(T__49);
				setState(203);
				columnlist();
				}
				break;
			case T__50:
				{
				setState(204);
				match(T__50);
				setState(205);
				columnlist();
				}
				break;
			case T__51:
				{
				setState(206);
				match(T__51);
				setState(207);
				columnlist();
				}
				break;
			case T__52:
				{
				setState(208);
				match(T__52);
				setState(209);
				columnlist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			_la = _input.LA(1);
			if ( !(((((_la - 75)) & ~0x3f) == 0 && ((1L << (_la - 75)) & ((1L << (T__74 - 75)) | (1L << (T__75 - 75)) | (1L << (T__76 - 75)) | (1L << (T__77 - 75)) | (1L << (T__78 - 75)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllCharContext extends ParserRuleContext {
		public AllCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allChar; }
	}

	public final AllCharContext allChar() throws RecognitionException {
		AllCharContext _localctx = new AllCharContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_allChar);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(215); 
			_errHandler.sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					setState(214);
					matchWildcard();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(217); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BirthdayContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(gramParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(gramParser.INT, i);
		}
		public BirthdayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_birthday; }
	}

	public final BirthdayContext birthday() throws RecognitionException {
		BirthdayContext _localctx = new BirthdayContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_birthday);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(219);
			_la = _input.LA(1);
			if ( !(_la==T__79 || _la==T__80) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(220);
			match(INT);
			setState(221);
			match(INT);
			setState(222);
			match(INT);
			setState(223);
			match(T__81);
			setState(224);
			_la = _input.LA(1);
			if ( !(_la==T__79 || _la==T__82) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(225);
			match(INT);
			setState(226);
			match(T__81);
			setState(227);
			_la = _input.LA(1);
			if ( !(((((_la - 80)) & ~0x3f) == 0 && ((1L << (_la - 80)) & ((1L << (T__79 - 80)) | (1L << (T__80 - 80)) | (1L << (T__82 - 80)) | (1L << (T__83 - 80)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(228);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(gramParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(gramParser.INT, i);
		}
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_time);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			_la = _input.LA(1);
			if ( !(((((_la - 80)) & ~0x3f) == 0 && ((1L << (_la - 80)) & ((1L << (T__79 - 80)) | (1L << (T__80 - 80)) | (1L << (T__82 - 80)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(231);
			match(INT);
			setState(232);
			match(T__84);
			setState(233);
			_la = _input.LA(1);
			if ( !(((((_la - 80)) & ~0x3f) == 0 && ((1L << (_la - 80)) & ((1L << (T__79 - 80)) | (1L << (T__80 - 80)) | (1L << (T__82 - 80)) | (1L << (T__83 - 80)) | (1L << (T__85 - 80)) | (1L << (T__86 - 80)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(234);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StudentNoContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(gramParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(gramParser.INT, i);
		}
		public StudentNoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_studentNo; }
	}

	public final StudentNoContext studentNo() throws RecognitionException {
		StudentNoContext _localctx = new StudentNoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_studentNo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(236);
			_la = _input.LA(1);
			if ( !(_la==T__79 || _la==T__80) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(237);
			match(INT);
			setState(238);
			match(INT);
			setState(239);
			match(INT);
			setState(240);
			match(T__81);
			setState(241);
			match(INT);
			setState(242);
			match(INT);
			setState(243);
			match(INT);
			setState(244);
			match(INT);
			setState(245);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemContext extends ParserRuleContext {
		public SemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sem; }
	}

	public final SemContext sem() throws RecognitionException {
		SemContext _localctx = new SemContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(247);
			_la = _input.LA(1);
			if ( !(((((_la - 88)) & ~0x3f) == 0 && ((1L << (_la - 88)) & ((1L << (T__87 - 88)) | (1L << (T__88 - 88)) | (1L << (T__89 - 88)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
